[BACKLOG-35358] Start up script and dependency changes for Java 11.