@@ -122,6 +122,10 @@ export LIBPATH
 
 OPT="-Xms1024m -Xmx2048m -Djava.library.path=$LIBPATH $OPT"
 
+if $($_PENTAHO_JAVA -version 2>&1 | grep "version \"11\..*" > /dev/null )
+then
+  OPT="$OPT -Djava.locale.providers=COMPAT,SPI"
+fi
 
 # ***************
 # ** Run...    **
